updated preview to use same pic as on blog

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:image" content="images/preview.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/martyav/martyav.github.io/master/img/tech-doc.png" />
     <title>Tech Doc Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed" rel="stylesheet">
